syntax = "proto3";

package user_stats;

import "google/protobuf/timestamp.proto";

service UserStats {
    rpc Query(QueryRequest) returns (stream User) {}
    rpc RawQuery(RawQueryRequest) returns (stream User) {}
    rpc Greet(GreetRequest) returns (GreetResponse) {}
}

message GreetRequest {
    string msg = 1;
}

message GreetResponse {
    string msg = 1;
}

message User {
    string email = 1;
    string name = 2;
}

message QueryRequest {
    map<string, TimeQuery> timestamps = 1;
    map<string, IDQuery> ids = 2;
}

message RawQueryRequest {
    string query = 1;
}

message TimeQuery {
    google.protobuf.Timestamp lower = 1;
    google.protobuf.Timestamp upper = 2;
}

message IDQuery {
    repeated uint32 ids = 1;
}